<resources>
    <string name="app_name">ExpensesTracking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--this is for CreateBudgetFragment-->
    <string name="title">New Budget</string>
    <string name="name">Budget Name</string>
    <string name="nominal">$     Nominal</string>
    <string name="button">ADD BUDGET</string>

    <!--For bottom_nav    -->
    <string name="expense">Expense</string>
    <string name="budget">Budgeting</string>
    <string name="report">Report</string>
    <string name="profile">Profile</string>

    <!--For budget_item_layout -->
    <string name="title_budget_item">Budgeting</string>

    <!-- For fragmentbudgetlist xml -->
    <string name="text_error">txtView</string>

    <!-- for Fragment_profile.xml    -->
    <string name="profile_title">Profile</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_password">Change Password</string>

    <!-- For fragment_edit_budget.xml    -->
    <string name="edit_budget">Edit Budget</string>
    <string name="save_changes">Save Changes</string>

    <string name="back">Back</string>
    <string name="new_budget">New Budget</string>
    <string name="budget_name_hint">Budget Name</string>
    <string name="nominal_hint">$ Nominal</string>
    <string name="add_budget">ADD BUDGET</string>


    <string name="update_budget">Update Budget</string>


    <string name="new_expense">New Expense</string>
    <string name="date_label">Date</string>
    <string name="amount_label">Nominal</string>
    <string name="expense_name_label">Keterangan</string>
    <string name="add_expense">ADD EXPENSE</string>

    <string name="welcome_user">Selamat datang, </string>

</resources>