<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itemExpense"
        android:icon="@drawable/outline_add_card_24"
        android:title="@string/expense"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemBudget"
        android:icon="@drawable/pie_chart_24dp_000000_fill0_wght400_grad0_opsz24"
        android:title="@string/budget"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemReport"
        android:icon="@drawable/outline_bar_chart_24"
        android:title="@string/report"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemProfile"
        android:icon="@drawable/person_24dp_000000_fill0_wght400_grad0_opsz24"
        android:title="@string/profile"
        app:showAsAction="always" />
</menu>